# monitor

./: .gitignore  CMakeLists.txt  README.md  TipsDialog.ui  app_win32.rc  auto_active.py  build_ninja.bat  build_qt5.bat  chartwidget.cpp  chartwidget.h  color_picker.py  config.cpp  config.h  config.json  cpumemoryprofiler.cpp  cpumemoryprofiler.h  easy_desk.py  easy_desk_2.py  frameplayer.cpp  frameplayer.h  hookutil.cpp  hookutil.h  keyboardhistory.cpp  keyboardhistory.h  macrosdef.h  main.cpp  mainwindow.cpp  mainwindow.h  mk_i18n.bat  monitor_zh_CN.ts  mousehistory.h  mrglobalapplication.cpp  mrglobalapplication.h  networker.cpp  networker.h  pack_qt5.bat  qdatethread.cpp  qdatethread.h  res.qrc  splashwindow.h  (+3 more)
chart/: boxdatareader.cpp  boxdatareader.h  customtablemodel.cpp  tablewidget.cpp  zoomlinechart.cpp  zoomlinechart.h  zoomlinechartview.cpp  zoomlinechartview.h
chart/rainfall/: rainfallgraph.cpp  rainfallgraph.h  variantbardataproxy.cpp  variantbardataproxy.h
res/: .gitignore  package-lock.json
res/i18n/: monitor_zh_CN.qm
